[gd_scene load_steps=23 format=3 uid="uid://718xxctblgwb"]

[ext_resource type="Script" path="res://Table/table.gd" id="1_3r04x"]
[ext_resource type="Texture2D" uid="uid://nci617fj6bda" path="res://Table/Default/plant1.png" id="2_gxagq"]
[ext_resource type="PackedScene" uid="uid://c3ac8vd8vebfa" path="res://Level/camera.tscn" id="3_aqjt6"]
[ext_resource type="Texture2D" uid="uid://dvplnsypvj674" path="res://Table/Default/plant2.png" id="3_x3o5o"]
[ext_resource type="Texture2D" uid="uid://bvxbiyd7b1nic" path="res://Table/Default/plant3.png" id="4_4i3mn"]
[ext_resource type="Texture2D" uid="uid://4k50m4rc1f86" path="res://Table/Default/plant4.png" id="5_r80dj"]
[ext_resource type="Texture2D" uid="uid://dq38d73qsm7cv" path="res://Table/Default/plant5.png" id="6_6u6w6"]
[ext_resource type="Texture2D" uid="uid://b1o8ja1gub7mr" path="res://Table/Default/plant6.png" id="7_3vxn2"]
[ext_resource type="Texture2D" uid="uid://v54dfd2pj1tw" path="res://Table/Default/tableside.png" id="8_3oasj"]
[ext_resource type="Texture2D" uid="uid://bju4upngdwhki" path="res://Table/Malice/meatside.png" id="9_nf21i"]
[ext_resource type="Texture2D" uid="uid://dyo7ou8o1v50x" path="res://Table/Default/redtable.png" id="9_w5cia"]
[ext_resource type="Texture2D" uid="uid://bupnhc368q8vc" path="res://Table/Malice/meattable.png" id="10_3v2db"]
[ext_resource type="Texture2D" uid="uid://bdu2idvax2af5" path="res://Table/Default/circle1.png" id="10_j16s2"]
[ext_resource type="Texture2D" uid="uid://2dj5cqy3tyi0" path="res://Table/Default/circle2.png" id="11_cn5x7"]
[ext_resource type="Texture2D" uid="uid://4vt2segahf86" path="res://Table/Default/circle3.png" id="12_igic4"]

[sub_resource type="Gradient" id="Gradient_3aqcl"]
colors = PackedColorArray(0.636664, 1.86507e-06, 6.257e-07, 1, 0.704532, 0.111794, 0.593921, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_5py28"]
gradient = SubResource("Gradient_3aqcl")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5k3o4"]
particle_flag_disable_z = true
direction = Vector3(0, 1, 0)
spread = 30.82
gravity = Vector3(0, 0, 0)
initial_velocity_min = 400.0
initial_velocity_max = 1000.0
angular_velocity_min = 57.37
angular_velocity_max = 720.0
orbit_velocity_min = -0.25
orbit_velocity_max = 0.25
linear_accel_min = -7.24
linear_accel_max = 9.75
radial_accel_min = -1000.0
radial_accel_max = -1000.0
tangential_accel_min = 2.45
tangential_accel_max = 54.15
damping_min = 44.622
damping_max = 96.56
angle_max = 64.5
scale_min = 0.0
scale_max = 17.21
color = Color(1, 0, 0, 1)
color_ramp = SubResource("GradientTexture1D_5py28")
hue_variation_max = 0.38

[sub_resource type="Animation" id="Animation_0ugbd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(8, -420)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:process_material:spread")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [30.82]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:process_material:initial_velocity_min")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [400.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:process_material:initial_velocity_max")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1000.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:process_material:orbit_velocity_min")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.25]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:process_material:orbit_velocity_max")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.25]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:process_material:radial_accel_min")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1000.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".:process_material:radial_accel_max")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1000.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath(".:lifetime")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("../SummoningCircle/Circle1:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.790898, 0.758782)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("../SummoningCircle/Circle2:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.790898, 0.758782)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("../SummoningCircle/Circle3:scale")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.790898, 0.758782)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("../SummoningCircle/Circle1:rotation")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath(".:emitting")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath(".:rotation")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_tnuo3"]
resource_name = "lose"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4.1, 4.5),
"transitions": PackedFloat32Array(1, 1, 0.203063),
"update": 0,
"values": [Vector2(3, 470), Vector2(3, 470), Vector2(-0.590128, -11.0001)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:process_material:spread")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4.1, 8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [30.82, 30.82, 180.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:process_material:initial_velocity_min")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 4.1, 8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [400.0, 400.0, 115.72]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:process_material:initial_velocity_max")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 4.1, 8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1000.0, 1000.0, 318.37]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:process_material:orbit_velocity_min")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 4.1, 8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.25, -0.25, -2.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:process_material:orbit_velocity_max")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 4.1, 8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.25, 0.25, 1.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:process_material:radial_accel_min")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 4.1, 8, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, -20000.0, -20.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".:process_material:radial_accel_max")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 4.1, 8, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, -10000.0, -20.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath(".:lifetime")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 2.3, 4.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.0, 1.0, 10.0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("../SummoningCircle/Circle1:scale")
tracks/9/interp = 2
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 1.1, 2.3, 4.1, 6.1, 8),
"transitions": PackedFloat32Array(0.435275, 1, 1, 0.435275, 1, 0.435275),
"update": 0,
"values": [Vector2(0.790898, 0.758782), Vector2(0.745631, 0.715353), Vector2(0.720127, 0.690884), Vector2(0.593767, 0.569656), Vector2(0.216226, 0.207446), Vector2(0.208271, 0.199813)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("../SummoningCircle/Circle2:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 1.1, 1.7, 2.2, 2.8, 3.3, 4.125, 5.1, 5.6, 6.1, 6.9, 8, 8.1),
"transitions": PackedFloat32Array(0.435275, 1, 1, 1, 1, 1, 0.435275, 1, 1, 1, 1, 0.435275, 1),
"update": 0,
"values": [Vector2(0.790898, 0.758782), Vector2(0.790249, 0.758159), Vector2(0.77327, 0.74187), Vector2(0.794727, 0.762456), Vector2(0.776134, 0.744618), Vector2(0.668078, 0.640949), Vector2(0.693067, 0.664924), Vector2(0.597751, 0.573478), Vector2(0.59819, 0.573899), Vector2(0.422453, 0.405298), Vector2(0.266652, 0.255824), Vector2(0.243294, 0.233414), Vector2(0.293728, 0.281801)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("../SummoningCircle/Circle3:scale")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 1.1, 1.7, 2.2, 3.3, 4.1, 5.1, 5.6, 6.1, 6.9, 7.9),
"transitions": PackedFloat32Array(0.574349, 1, 1, 0.574349, 1, 0.574349, 1, 1, 1, 1, 0.574349),
"update": 0,
"values": [Vector2(0.790898, 0.758782), Vector2(0.761128, 0.730221), Vector2(0.856177, 0.82141), Vector2(0.792666, 0.760478), Vector2(0.929296, 0.89156), Vector2(0.918767, 0.881459), Vector2(0.692607, 0.664482), Vector2(0.49496, 0.474861), Vector2(0.544217, 0.522118), Vector2(0.399039, 0.382835), Vector2(0.325562, 0.312342)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("../SummoningCircle/Circle1:rotation")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0, 1.1, 4.1, 6.05, 8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.57079, 3.14159, 4.71238, 6.28318]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath(".:emitting")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath(".:rotation")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0, 4.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [3.14159, 3.14159]
}

[sub_resource type="Animation" id="Animation_6huo4"]
resource_name = "win"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4.1, 4.5),
"transitions": PackedFloat32Array(1, 1, 0.203063),
"update": 0,
"values": [Vector2(3, -462), Vector2(3, -462), Vector2(-0.590128, -11.0001)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:process_material:spread")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4.1, 8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [30.82, 30.82, 180.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:process_material:initial_velocity_min")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 4.1, 8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [400.0, 400.0, 115.72]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:process_material:initial_velocity_max")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 4.1, 8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1000.0, 1000.0, 318.37]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:process_material:orbit_velocity_min")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 4.1, 8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.25, -0.25, -2.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:process_material:orbit_velocity_max")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 4.1, 8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.25, 0.25, 1.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:process_material:radial_accel_min")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 4.1, 8, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, -20000.0, -20.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".:process_material:radial_accel_max")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 4.1, 8, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, -10000.0, -20.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath(".:lifetime")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 2.3, 4.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.0, 1.0, 10.0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("../SummoningCircle/Circle1:scale")
tracks/9/interp = 2
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 1.1, 2.3, 4.1, 6.1, 8),
"transitions": PackedFloat32Array(0.435275, 1, 1, 0.435275, 1, 0.435275),
"update": 0,
"values": [Vector2(0.790898, 0.758782), Vector2(0.745631, 0.715353), Vector2(0.720127, 0.690884), Vector2(0.593767, 0.569656), Vector2(0.216226, 0.207446), Vector2(0.208271, 0.199813)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("../SummoningCircle/Circle2:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 1.1, 1.7, 2.2, 2.8, 3.3, 4.125, 5.1, 5.6, 6.1, 6.9, 8, 8.1),
"transitions": PackedFloat32Array(0.435275, 1, 1, 1, 1, 1, 0.435275, 1, 1, 1, 1, 0.435275, 1),
"update": 0,
"values": [Vector2(0.790898, 0.758782), Vector2(0.790249, 0.758159), Vector2(0.77327, 0.74187), Vector2(0.794727, 0.762456), Vector2(0.776134, 0.744618), Vector2(0.668078, 0.640949), Vector2(0.693067, 0.664924), Vector2(0.597751, 0.573478), Vector2(0.59819, 0.573899), Vector2(0.422453, 0.405298), Vector2(0.266652, 0.255824), Vector2(0.243294, 0.233414), Vector2(0.293728, 0.281801)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("../SummoningCircle/Circle3:scale")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 1.1, 1.7, 2.2, 3.3, 4.1, 5.1, 5.6, 6.1, 6.9, 7.9),
"transitions": PackedFloat32Array(0.574349, 1, 1, 0.574349, 1, 0.574349, 1, 1, 1, 1, 0.574349),
"update": 0,
"values": [Vector2(0.790898, 0.758782), Vector2(0.761128, 0.730221), Vector2(0.856177, 0.82141), Vector2(0.792666, 0.760478), Vector2(0.929296, 0.89156), Vector2(0.918767, 0.881459), Vector2(0.692607, 0.664482), Vector2(0.49496, 0.474861), Vector2(0.544217, 0.522118), Vector2(0.399039, 0.382835), Vector2(0.325562, 0.312342)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("../SummoningCircle/Circle1:rotation")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0, 1.1, 4.1, 6.05, 8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.57079, 3.14159, 4.71238, 6.28318]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath(".:emitting")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath(".:rotation")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0, 4.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yoajj"]
_data = {
"RESET": SubResource("Animation_0ugbd"),
"lose": SubResource("Animation_tnuo3"),
"win": SubResource("Animation_6huo4")
}

[node name="Table" type="Node2D"]
texture_filter = 1
script = ExtResource("1_3r04x")
use_decals = true
texture = ExtResource("9_w5cia")
sidetexture = ExtResource("8_3oasj")
summoning_color = Color(0.4, 0.4, 0.596078, 1)
light_color = Color(0.74902, 0.690196, 0.560784, 1)
shadow_color = Color(0.580392, 0.235294, 0.262745, 1)
decals = Array[Texture2D]([ExtResource("2_gxagq"), ExtResource("3_x3o5o"), ExtResource("4_4i3mn"), ExtResource("5_r80dj"), ExtResource("6_6u6w6"), ExtResource("7_3vxn2")])

[node name="TableBorder" type="Sprite2D" parent="."]
position = Vector2(0, 432)
scale = Vector2(0.759, 0.759)
texture = ExtResource("9_nf21i")
offset = Vector2(0, 34)

[node name="Table" type="Sprite2D" parent="."]
position = Vector2(0, 3)
scale = Vector2(0.758631, 0.790741)
texture = ExtResource("10_3v2db")

[node name="SummoningCircle" type="Node2D" parent="."]
modulate = Color(0.0470588, 0.0901961, 0.2, 1)
position = Vector2(0, 3)
scale = Vector2(0.758631, 0.790741)

[node name="Circle1" type="Sprite2D" parent="SummoningCircle"]
position = Vector2(-2.63633, -2.52927)
scale = Vector2(0.790898, 0.758782)
texture = ExtResource("10_j16s2")

[node name="Circle2" type="Sprite2D" parent="SummoningCircle"]
position = Vector2(-3.95449, -1.26464)
scale = Vector2(0.790898, 0.758782)
texture = ExtResource("11_cn5x7")

[node name="Circle3" type="Sprite2D" parent="SummoningCircle"]
position = Vector2(-2.63633, -1.26464)
scale = Vector2(0.790898, 0.758782)
texture = ExtResource("12_igic4")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(8, -420)
scale = Vector2(0.758631, 0.790741)
emitting = false
amount = 200
process_material = SubResource("ParticleProcessMaterial_5k3o4")
speed_scale = 2.2
explosiveness = 0.2
randomness = 0.7

[node name="AnimationPlayer" type="AnimationPlayer" parent="GPUParticles2D"]
libraries = {
"": SubResource("AnimationLibrary_yoajj")
}

[node name="Decks" type="Node2D" parent="."]

[node name="Marker2D2" type="Marker2D" parent="Decks"]
position = Vector2(-299, 0)

[node name="Marker2D" type="Marker2D" parent="Decks"]

[node name="Marker2D3" type="Marker2D" parent="Decks"]
position = Vector2(300, 0)

[node name="Asset" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Effect" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Player" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Spawns" type="Node2D" parent="."]
y_sort_enabled = true
texture_filter = 1

[node name="Overlays" type="Node2D" parent="."]

[node name="Camera" parent="." instance=ExtResource("3_aqjt6")]

[node name="GameStartTimer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="GPUParticles2D/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="child_entered_tree" from="Spawns" to="." method="_on_spawns_child_entered_tree"]
[connection signal="timeout" from="GameStartTimer" to="." method="_on_game_start_timer_timeout"]
